kubernetes/apps/storage/media-kantai1/nfs/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: media-nfs
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: media-nfs
      app.kubernetes.io/name: media-nfs
  egress:
    - toCIDR:
        - 192.168.1.0/24
      toPorts:
        - ports:
            - port: "2049"
              protocol: ANY
    - toEntities:
        - cluster
      toPorts:
        - ports:
            - port: "2049"
              protocol: ANY
  ingress:
    - fromCIDR:
        - 192.168.1.0/24
      toPorts:
        - ports:
            - port: "2049"
              protocol: ANY
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "2049"
              protocol: ANY
        - ports:
            - port: "9587"
              protocol: TCP
